--- a/public/index.html
+++ b/public/index.html
@@ -20,95 +20,151 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="c-header js-scroll-offset">
-      <div class="c-container">
-        <div class="c-header_inner">
-          <h1 class="c-header_logo">
-            <a href="#"> Rabi Inc. </a>
-          </h1>
-          <nav class="c-header_nav u-pc">
-            <ul>
-              <li><a href="#section-01">01</a></li>
-              <li><a href="#section-02">02</a></li>
-              <li><a href="#section-03">03</a></li>
-            </ul>
-          </nav>
-          <button class="c-header_menu-button js-toggle-menu u-sp">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
+    <div class="c-wrapper">
+      <header class="c-header">
+        <div class="c-container">
+          <div class="c-header_inner">
+            <h1 class="c-title">usagizmo</h1>
+            <section>
+              <h2 class="c-subtitle">Profile</h2>
+              <ul class="c-inline-list">
+                <li>Web Engineer</li>
+                <li>Next.js (Vercel)</li>
+                <li>TypeScript</li>
+              </ul>
+            </section>
+          </div>
         </div>
-      </div>
-    </header>
-    <div data-same-height=".c-header"></div>
-    <div class="c-sp-menu u-sp">
-      <ul class="c-sp-menu_inner">
-        <li><a href="#section-01" class="c-sp-menu_link js-close-menu">01</a></li>
-        <li><a href="#section-02" class="c-sp-menu_link js-close-menu">02</a></li>
-        <li><a href="#section-03" class="c-sp-menu_link js-close-menu">03</a></li>
-      </ul>
+      </header>
+
+      <main class="c-main">
+        <div class="c-container">
+          <div class="c-main_inner">
+            <section>
+              <h2 class="c-subtitle">Works</h2>
+              <ul>
+                <li>
+                  <strong
+                    ><a
+                      class="u-text-link"
+                      href="https://tomatimer.com/"
+                      target="_blank"
+                      rel="noopener"
+                      >Tomatimer</a
+                    >:</strong
+                  >
+                  25分間を計るだけのタイマー
+                </li>
+              </ul>
+            </section>
+            <section>
+              <h2 class="c-subtitle">Links</h2>
+              <ul>
+                <li>
+                  <strong>twitter: </strong
+                  ><a
+                    class="u-text-link"
+                    href="https://twitter.com/usagizmo"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >@usagizmo</a
+                  >
+                </li>
+                <li>
+                  <strong>company: </strong
+                  ><a
+                    class="u-text-link"
+                    href="https://rabi.co.jp"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Rabi Inc.</a
+                  >
+                </li>
+                <li>
+                  <strong>github: </strong
+                  ><a
+                    class="u-text-link"
+                    href="https://github.com/usagizmo"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >usagizmo</a
+                  >
+                </li>
+                <li>
+                  <strong>qiita: </strong
+                  ><a
+                    class="u-text-link"
+                    href="https://qiita.com/usagizmo"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >usagizmo</a
+                  >
+                </li>
+              </ul>
+            </section>
+            <section>
+              <h2 class="c-subtitle">Likes</h2>
+              <h3 class="c-sub2title">Setapp</h3>
+              <ul class="c-inline-list --small">
+                <li>Bartenlir</li>
+                <li>CleanMyMac X</li>
+                <li>CleanShot X</li>
+                <li>Dash</li>
+                <li>Default Folder X</li>
+                <li>Flinto</li>
+                <li>ForkLift</li>
+                <li>iStat Menus</li>
+                <li>Marked</li>
+                <li>MetaImage</li>
+                <li>Mission Control Plus</li>
+                <li>Numi</li>
+                <li>Paste</li>
+                <li>Paw</li>
+                <li>SnippetsLab</li>
+                <li>TextSniper</li>
+                <li>Timing</li>
+              </ul>
+              <h3 class="c-sub2title">Apps</h3>
+              <ul class="c-inline-list --small">
+                <li>Avocode</li>
+                <li>CotEditor</li>
+                <li>DeepL</li>
+                <li>Display Menu</li>
+                <li>Dropbox</li>
+                <li>Dropshelf</li>
+                <li>Figma</li>
+                <li>Gestimer</li>
+                <li>GIPHY CAPTURE</li>
+                <li>Integrity plus</li>
+                <li>iTerm</li>
+                <li>Kaleidoscope</li>
+                <li>Keka</li>
+                <li>Magnet</li>
+                <li>Mailplane</li>
+                <li>Notion</li>
+                <li>Pinegrow</li>
+                <li>Pixelmator Pro</li>
+                <li>Sequel Pro</li>
+                <li>Sublime Merge</li>
+                <li>Visual Studio Code</li>
+              </ul>
+              <h3 class="c-sub2title">Devices</h3>
+              <ul class="c-inline-list --small">
+                <li>Google Pixel</li>
+                <li>MacBook Pro</li>
+                <li>Expert Mouse</li>
+                <li>HHKB Type-S</li>
+                <li>OPENCOMM AfterShokz</li>
+                <li>Stream Deck XL</li>
+              </ul>
+            </section>
+          </div>
+        </div>
+      </main>
     </div>
 
-    <main>
-      <section>
-        <div class="c-container">
-          <div class="c-other-01">.c-container</div>
-        </div>
-      </section>
-
-      <section>
-        <div class="c-container --large">
-          <div class="c-other-01">.c-container.--large</div>
-        </div>
-      </section>
-
-      <section>
-        <div class="c-container --large --no-pad">
-          <div class="c-container --full">
-            <div class="c-other-01">.c-container.--large.--no-pad > .c-container.--full</div>
-          </div>
-          <div class="c-container">
-            <div class="c-other-01">.c-container.--large.--no-pad > .c-container</div>
-          </div>
-        </div>
-      </section>
-
-      <div>
-        <section id="section-01" class="u-h-400">
-          <div class="c-container">#c-section-01.u-h-400</div>
-        </section>
-        <section id="section-02" class="u-h-400">
-          <div class="c-container">#c-section-02.u-h-400</div>
-        </section>
-        <div class="u-flex u-justify-center">
-          <div class="c-component-02" data-in="fade"></div>
-          <div class="c-component-02" data-in="fade" data-in-out></div>
-        </div>
-        <section id="section-03" class="u-h-400">
-          <div class="c-container">#c-section-03.u-h-400</div>
-        </section>
-      </div>
-    </main>
-
-    <div class="c-component-01" data-in="fade" data-in-out data-in-top="200"></div>
-
-    <footer class="c-footer">
-      <div class="c-container">
-        <div class="c-footer_inner">
-          <h1 class="c-footer_title">Rabi Inc.</h1>
-          <p class="c-footer_copyright">
-            &copy;
-            <a href="https://usagizmo.com" target="_blank" rel="noopener noreferrer">usagizmo</a>
-          </p>
-        </div>
-      </div>
-    </footer>
-
     <script src="libs/jquery-3.6.0.min.js"></script>
-    <script src="libs/jquery.ba-throttle-debounce.min.js"></script>
     <script src="libs/jquery.easing.min.js"></script>
-    <script src="libs/jquery.sticky.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
