--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Static Site Template</title>
-    <meta name="description" content="Static Site Template Description" />
-    <meta property="og:title" content="Static Site Template" />
+    <title>usagizmo.com</title>
+    <meta name="description" content="usagizmo - Web Engineer" />
+    <meta property="og:title" content="usagizmo.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://static-site-template.io" />
-    <meta property="og:image" content="https://static-site-template.io/images/ogp-fb.png" />
-    <meta property="og:site_name" content="Static Site Template" />
-    <meta property="og:description" content="Static Site Template Description" />
+    <meta property="og:url" content="https://usagizmo.com" />
+    <meta property="og:image" content="https://usagizmo.com/images/ogp.png" />
+    <meta property="og:site_name" content="usagizmo.com" />
+    <meta property="og:description" content="usagizmo - Web Engineer" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Static Site Template" />
-    <meta name="twitter:description" content="Static Site Template Description" />
-    <meta name="twitter:image" content="https://static-site-template.io/images/ogp-tw.png" />
+    <meta name="twitter:title" content="usagizmo.com" />
+    <meta name="twitter:description" content="usagizmo - Web Engineer" />
+    <meta name="twitter:image" content="https://usagizmo.com/images/ogp.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="libs/reset.min.css" />
     <link rel="stylesheet" href="styles.css" />
