--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,21 @@
               <h2 class="c-subtitle">Profile</h2>
               <ul class="c-inline-list">
                 <li>Web Engineer</li>
-                <li>Next.js (Vercel)</li>
-                <li>TypeScript</li>
+                <li>
+                  <a class="u-text-link" href="https://nextjs.org/" target="_blank" rel="noopener">
+                    Next.js (Vercel)
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://tomatimer.com/"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    TypeScript
+                  </a>
+                </li>
               </ul>
             </section>
           </div>
@@ -46,7 +59,7 @@
                 <li>
                   <strong
                     ><a
-                      class="u-text-link"
+                      class="u-text-link --line"
                       href="https://tomatimer.com/"
                       target="_blank"
                       rel="noopener"
@@ -63,7 +76,7 @@
                 <li>
                   <strong>twitter: </strong
                   ><a
-                    class="u-text-link"
+                    class="u-text-link --line"
                     href="https://twitter.com/usagizmo"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -73,7 +86,7 @@
                 <li>
                   <strong>company: </strong
                   ><a
-                    class="u-text-link"
+                    class="u-text-link --line"
                     href="https://rabi.co.jp"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -83,7 +96,7 @@
                 <li>
                   <strong>github: </strong
                   ><a
-                    class="u-text-link"
+                    class="u-text-link --line"
                     href="https://github.com/usagizmo"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -93,7 +106,7 @@
                 <li>
                   <strong>qiita: </strong
                   ><a
-                    class="u-text-link"
+                    class="u-text-link --line"
                     href="https://qiita.com/usagizmo"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -104,58 +117,393 @@
             </section>
             <section>
               <h2 class="c-subtitle">Likes</h2>
-              <h3 class="c-sub2title">Setapp</h3>
+              <h3 class="c-sub2title">
+                <a class="u-text-link" href="https://setapp.com/" target="_blank" rel="noopener"
+                  >Setapp</a
+                >
+              </h3>
               <ul class="c-inline-list --small">
-                <li>Bartenlir</li>
-                <li>CleanMyMac X</li>
-                <li>CleanShot X</li>
-                <li>Dash</li>
-                <li>Default Folder X</li>
-                <li>Flinto</li>
-                <li>ForkLift</li>
-                <li>iStat Menus</li>
-                <li>Marked</li>
-                <li>MetaImage</li>
-                <li>Mission Control Plus</li>
-                <li>Numi</li>
-                <li>Paste</li>
-                <li>Paw</li>
-                <li>SnippetsLab</li>
-                <li>TextSniper</li>
-                <li>Timing</li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.macbartender.com/"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Bartender
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://macpaw.com/cleanmymac"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    CleanMyMac X
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://cleanshot.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >CleanShot X</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://kapeli.com/dash"
+                    target="_blank"
+                    rel="noopener"
+                    >Dash</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.stclairsoft.com/DefaultFolderX/"
+                    target="_blank"
+                    rel="noopener"
+                    >Default Folder X</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.flinto.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Flinto</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://binarynights.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >ForkLift</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://bjango.com/mac/istatmenus/"
+                    target="_blank"
+                    rel="noopener"
+                    >iStat Menus</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://marked2app.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Marked</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://neededapps.com/metaimage/"
+                    target="_blank"
+                    rel="noopener"
+                    >MetaImage</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.fadel.io/missioncontrolplus"
+                    target="_blank"
+                    rel="noopener"
+                    >Mission Control Plus</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="https://numi.app/" target="_blank" rel="noopener"
+                    >Numi</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="https://pasteapp.io/" target="_blank" rel="noopener"
+                    >Paste</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="https://paw.cloud/" target="_blank" rel="noopener"
+                    >Paw</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.renfei.org/snippets-lab/"
+                    target="_blank"
+                    rel="noopener"
+                    >SnippetsLab</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://textsniper.app/"
+                    target="_blank"
+                    rel="noopener"
+                    >TextSniper</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://timingapp.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Timing</a
+                  >
+                </li>
               </ul>
               <h3 class="c-sub2title">Apps</h3>
               <ul class="c-inline-list --small">
-                <li>Avocode</li>
-                <li>CotEditor</li>
-                <li>DeepL</li>
-                <li>Display Menu</li>
-                <li>Dropbox</li>
-                <li>Dropshelf</li>
-                <li>Figma</li>
-                <li>Gestimer</li>
-                <li>GIPHY CAPTURE</li>
-                <li>Integrity plus</li>
-                <li>iTerm</li>
-                <li>Kaleidoscope</li>
-                <li>Keka</li>
-                <li>Magnet</li>
-                <li>Mailplane</li>
-                <li>Notion</li>
-                <li>Pinegrow</li>
-                <li>Pixelmator Pro</li>
-                <li>Sequel Pro</li>
-                <li>Sublime Merge</li>
-                <li>Visual Studio Code</li>
+                <li>
+                  <a class="u-text-link" href="https://avocode.com/" target="_blank" rel="noopener"
+                    >Avocode</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://coteditor.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >CotEditor</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.deepl.com/ja/translator"
+                    target="_blank"
+                    rel="noopener"
+                    >DeepL</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="http://displaymenu.milchimgemuesefach.de/"
+                    target="_blank"
+                    rel="noopener"
+                    >Display Menu</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.dropbox.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Dropbox</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://pilotmoon.com/dropshelf/"
+                    target="_blank"
+                    rel="noopener"
+                    >Dropshelf</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.figma.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Figma</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://apps.apple.com/jp/app/gestimer/id990588172"
+                    target="_blank"
+                    rel="noopener"
+                    >Gestimer</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://giphy.com/apps/giphycapture"
+                    target="_blank"
+                    rel="noopener"
+                    >GIPHY CAPTURE</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://peacockmedia.software/mac/integrity-plus/"
+                    target="_blank"
+                    rel="noopener"
+                    >Integrity plus</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="https://iterm2.com/" target="_blank" rel="noopener"
+                    >iTerm</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://kaleidoscope.app/"
+                    target="_blank"
+                    rel="noopener"
+                    >Kaleidoscope</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="https://www.keka.io/" target="_blank" rel="noopener"
+                    >Keka</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://magnet.crowdcafe.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Magnet</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://mailplaneapp.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Mailplane</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.notion.so/"
+                    target="_blank"
+                    rel="noopener"
+                    >Notion</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="https://pinegrow.com/" target="_blank" rel="noopener"
+                    >Pinegrow</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.pixelmator.com/pro/"
+                    target="_blank"
+                    rel="noopener"
+                    >Pixelmator Pro</a
+                  >
+                </li>
+                <li>
+                  <a class="u-text-link" href="http://sequelpro.com/" target="_blank" rel="noopener"
+                    >Sequel Pro</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.sublimemerge.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Sublime Merge</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://code.visualstudio.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Visual Studio Code</a
+                  >
+                </li>
               </ul>
               <h3 class="c-sub2title">Devices</h3>
               <ul class="c-inline-list --small">
-                <li>Google Pixel</li>
-                <li>MacBook Pro</li>
-                <li>Expert Mouse</li>
-                <li>HHKB Type-S</li>
-                <li>OPENCOMM AfterShokz</li>
-                <li>Stream Deck XL</li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://store.google.com/jp/category/phones"
+                    target="_blank"
+                    rel="noopener"
+                    >Google Pixel</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.apple.com/jp/macbook-pro/"
+                    target="_blank"
+                    rel="noopener"
+                    >MacBook Pro</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.kensington.com/ja-jp/p/%E8%A3%BD%E5%93%81/%E3%82%B3%E3%83%B3%E3%83%88%E3%83%AD%E3%83%BC%E3%83%AB/%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9C%E3%83%BC%E3%83%AB/%E3%82%A8%E3%82%AD%E3%82%B9%E3%83%91%E3%83%BC%E3%83%88%E3%83%9E%E3%82%A6%E3%82%B9-%E3%83%AF%E3%82%A4%E3%83%A4%E3%83%AC%E3%82%B9%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9C%E3%83%BC%E3%83%AB/"
+                    target="_blank"
+                    rel="noopener"
+                    >Expert Mouse</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.pfu.fujitsu.com/direct/hhkb/detail_pd-kb820bs.html"
+                    target="_blank"
+                    rel="noopener"
+                    >HHKB Type-S</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://aftershokz.jp/products/bone-conduction-headphone-opencomm"
+                    target="_blank"
+                    rel="noopener"
+                    >OpenComm AfterShokz</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.elgato.com/ja/gaming/stream-deck-xl"
+                    target="_blank"
+                    rel="noopener"
+                    >Stream Deck XL</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.zoff.co.jp/shop/contents/shuchu.aspx"
+                    target="_blank"
+                    rel="noopener"
+                    >Zoff+集中</a
+                  >
+                </li>
               </ul>
             </section>
           </div>
