--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:description" content="usagizmo - Web Engineer" />
     <meta name="twitter:image" content="https://usagizmo.com/images/ogp.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="https://use.typekit.net/qaf8moq.css" />
     <link rel="stylesheet" href="libs/reset.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
