Apply dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -58,14 +58,14 @@
               <h2 class="c-subtitle">Works</h2>
               <ul>
                 <li>
-                  <strong
+                  <strong class="u-property"
                     ><a
                       class="u-text-link --line"
                       href="https://tomatimer.com/"
                       target="_blank"
                       rel="noopener"
                       >Tomatimer</a
-                    >:</strong
+                    ></strong
                   >
                   25分間を計るだけのタイマー
                 </li>
@@ -75,7 +75,7 @@
               <h2 class="c-subtitle">Links</h2>
               <ul>
                 <li>
-                  <strong>twitter: </strong
+                  <strong class="u-property">twitter</strong
                   ><a
                     class="u-text-link --line"
                     href="https://twitter.com/usagizmo"
@@ -85,7 +85,7 @@
                   >
                 </li>
                 <li>
-                  <strong>company: </strong
+                  <strong class="u-property">company</strong
                   ><a
                     class="u-text-link --line"
                     href="https://rabi.co.jp"
@@ -95,7 +95,7 @@
                   >
                 </li>
                 <li>
-                  <strong>github: </strong
+                  <strong class="u-property">github</strong
                   ><a
                     class="u-text-link --line"
                     href="https://github.com/usagizmo"
@@ -105,7 +105,7 @@
                   >
                 </li>
                 <li>
-                  <strong>qiita: </strong
+                  <strong class="u-property">qiita</strong
                   ><a
                     class="u-text-link --line"
                     href="https://qiita.com/usagizmo"
