Refactoring theme switching

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/qaf8moq.css" />
     <link rel="stylesheet" href="libs/reset.min.css" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="script-head.js"></script>
+    <script src="js/theme-switcher.js"></script>
   </head>
   <body>
     <div class="c-wrapper">
@@ -512,7 +512,7 @@
               <input id="theme-checkbox" type="checkbox" class="js-theme-checkbox u-sr-only" />
               <div class="c-theme-switcher_inner">
                 <label
-                  class="c-theme-switcher_button js-theme-text"
+                  class="c-theme-switcher_button js-theme-invert-text"
                   role="button"
                   for="theme-checkbox"
                 ></label>
