--- a/public/index.html
+++ b/public/index.html
@@ -62,13 +62,49 @@
                   <strong class="u-property"
                     ><a
                       class="u-text-link --line"
+                      href="https://github.com/usagizmo/usagizmo.com_2021"
+                      target="_blank"
+                      rel="noopener"
+                      >usagizmo.com</a
+                    ></strong
+                  >
+                  このサイト
+                </li>
+                <li>
+                  <strong class="u-property"
+                    ><a
+                      class="u-text-link --line"
+                      href="https://github.com/usagizmo/static-site-template"
+                      target="_blank"
+                      rel="noopener"
+                      >static-site-template</a
+                    ></strong
+                  >
+                  静的サイトを作るとき
+                </li>
+                <li>
+                  <strong class="u-property"
+                    ><a
+                      class="u-text-link --line"
+                      href="https://github.com/usagizmo/nextjs-template"
+                      target="_blank"
+                      rel="noopener"
+                      >nextjs-template</a
+                    ></strong
+                  >
+                  Next.jsでWebアプリを作るとき
+                </li>
+                <li>
+                  <strong class="u-property"
+                    ><a
+                      class="u-text-link --line"
                       href="https://tomatimer.com/"
                       target="_blank"
                       rel="noopener"
                       >Tomatimer</a
                     ></strong
                   >
-                  25分間を計るだけのタイマー
+                  25分間を計るだけ
                 </li>
               </ul>
             </section>
