Rename this repository name

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                   <strong class="u-property"
                     ><a
                       class="u-text-link --line"
-                      href="https://github.com/usagizmo/usagizmo.com_2021"
+                      href="https://github.com/usagizmo/usagizmo.com"
                       target="_blank"
                       rel="noopener"
                       >usagizmo.com</a
