--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 <li>Web Engineer</li>
                 <li>
                   <a class="u-text-link" href="https://nextjs.org/" target="_blank" rel="noopener">
-                    Next.js (Vercel)
+                    Next.js
                   </a>
                 </li>
                 <li>
@@ -155,6 +155,72 @@
             </section>
             <section>
               <h2 class="c-subtitle">Likes</h2>
+              <h3 class="c-sub2title">Devices</h3>
+              <ul class="c-inline-list --small">
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.kensington.com/ja-jp/p/%E8%A3%BD%E5%93%81/%E3%82%B3%E3%83%B3%E3%83%88%E3%83%AD%E3%83%BC%E3%83%AB/%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9C%E3%83%BC%E3%83%AB/%E3%82%A8%E3%82%AD%E3%82%B9%E3%83%91%E3%83%BC%E3%83%88%E3%83%9E%E3%82%A6%E3%82%B9-%E3%83%AF%E3%82%A4%E3%83%A4%E3%83%AC%E3%82%B9%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9C%E3%83%BC%E3%83%AB/"
+                    target="_blank"
+                    rel="noopener"
+                    >Expert Mouse</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://store.google.com/jp/category/phones"
+                    target="_blank"
+                    rel="noopener"
+                    >Google Pixel</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://archisite.co.jp/products/mistel/barocco-md770-rgb-bt/"
+                    target="_blank"
+                    rel="noopener"
+                    >BAROCCO MD770</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.apple.com/jp/macbook-pro/"
+                    target="_blank"
+                    rel="noopener"
+                    >MacBook Pro</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://aftershokz.jp/products/bone-conduction-headphone-opencomm"
+                    target="_blank"
+                    rel="noopener"
+                    >OpenComm AfterShokz</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.elgato.com/ja/gaming/stream-deck-xl"
+                    target="_blank"
+                    rel="noopener"
+                    >Stream Deck XL</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.zoff.co.jp/shop/contents/shuchu.aspx"
+                    target="_blank"
+                    rel="noopener"
+                    >Zoff+集中</a
+                  >
+                </li>
+              </ul>
               <h3 class="c-sub2title">
                 <a class="u-text-link" href="https://setapp.com/" target="_blank" rel="noopener"
                   >Setapp</a
@@ -474,72 +540,6 @@
                     target="_blank"
                     rel="noopener"
                     >Visual Studio Code</a
-                  >
-                </li>
-              </ul>
-              <h3 class="c-sub2title">Devices</h3>
-              <ul class="c-inline-list --small">
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://www.kensington.com/ja-jp/p/%E8%A3%BD%E5%93%81/%E3%82%B3%E3%83%B3%E3%83%88%E3%83%AD%E3%83%BC%E3%83%AB/%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9C%E3%83%BC%E3%83%AB/%E3%82%A8%E3%82%AD%E3%82%B9%E3%83%91%E3%83%BC%E3%83%88%E3%83%9E%E3%82%A6%E3%82%B9-%E3%83%AF%E3%82%A4%E3%83%A4%E3%83%AC%E3%82%B9%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9C%E3%83%BC%E3%83%AB/"
-                    target="_blank"
-                    rel="noopener"
-                    >Expert Mouse</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://store.google.com/jp/category/phones"
-                    target="_blank"
-                    rel="noopener"
-                    >Google Pixel</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://www.pfu.fujitsu.com/direct/hhkb/detail_pd-kb820bs.html"
-                    target="_blank"
-                    rel="noopener"
-                    >HHKB Type-S</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://www.apple.com/jp/macbook-pro/"
-                    target="_blank"
-                    rel="noopener"
-                    >MacBook Pro</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://aftershokz.jp/products/bone-conduction-headphone-opencomm"
-                    target="_blank"
-                    rel="noopener"
-                    >OpenComm AfterShokz</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://www.elgato.com/ja/gaming/stream-deck-xl"
-                    target="_blank"
-                    rel="noopener"
-                    >Stream Deck XL</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://www.zoff.co.jp/shop/contents/shuchu.aspx"
-                    target="_blank"
-                    rel="noopener"
-                    >Zoff+集中</a
                   >
                 </li>
               </ul>
