--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                 <li>
                   <a
                     class="u-text-link"
-                    href="https://tomatimer.com/"
+                    href="https://www.typescriptlang.org/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
