--- a/public/index.html
+++ b/public/index.html
@@ -217,15 +217,6 @@
                     >Stream Deck XL</a
                   >
                 </li>
-                <li>
-                  <a
-                    class="u-text-link"
-                    href="https://www.zoff.co.jp/shop/contents/shuchu.aspx"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >Zoff+集中</a
-                  >
-                </li>
               </ul>
               <h3 class="c-sub2title">
                 <a
@@ -250,6 +241,15 @@
                 <li>
                   <a
                     class="u-text-link"
+                    href="https://macpaw.com/cleanmymac"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >CleanMyMac X</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
                     href="https://cleanshot.com/"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -263,6 +263,15 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     >Dash</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://devutils.app/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >DevUtils</a
                   >
                 </li>
                 <li>
@@ -355,6 +364,24 @@
                     >SnippetsLab</a
                   >
                 </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://typefaceapp.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Typeface</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://www.intuitibits.com/products/wifiexplorer/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >WiFi Explorer</a
+                  >
+                </li>
               </ul>
               <h3 class="c-sub2title">Apps</h3>
               <ul class="c-inline-list --small">
@@ -370,10 +397,10 @@
                 <li>
                   <a
                     class="u-text-link"
-                    href="https://avocode.com/"
+                    href="https://www.alfredapp.com/"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >Avocode</a
+                    >Alfred</a
                   >
                 </li>
                 <li>
@@ -514,15 +541,6 @@
                 <li>
                   <a
                     class="u-text-link"
-                    href="https://mailplaneapp.com/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >Mailplane</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="u-text-link"
                     href="https://www.notion.so/"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -554,6 +572,15 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     >Sequel Pro</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="u-text-link"
+                    href="https://sparkmailapp.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Spark</a
                   >
                 </li>
                 <li>
